fix: Fix alignment for desktop footer (#2)
* docs: Update to the new vscode settings

* fix: Fix aligment of desktop footer

* style: Remove unecessary css properties

--- a/src/global-components/footer/footer.scss
+++ b/src/global-components/footer/footer.scss
@@ -3,12 +3,11 @@
   white-space: pre-wrap;
   display: flex;
   justify-content: center;
-    a {
-      font-family: 'Proxima Nova';
-      font-style: normal;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 18px;
-      color: #DCE6EA;
-    }
+
+  a {
+    font-family: 'Proxima Nova';
+    font-weight: 700;
+    font-size: 18px;
+    color: #DCE6EA;
   }
+}
